added custom properties and general styles to css file

--- a/style.css
+++ b/style.css
@@ -1,3 +1,132 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* ==================================== */
+/* Custom properties and general styles */
+/* ==================================== */
+
+:root {
+  --ff-main: 'Rubik', sans-serif;
+
+  --fw-light: 300;
+  --fw-regular: 400;
+  --fw-medium: 500;
+
+  --fs-07: 0.438rem;
+  --fs-08: 0.5em;
+  --fs-09: 0.563em;
+  --fs-10: 0.625rem;
+  --fs-12: 0.75rem;
+  --fs-13: 0.813rem;
+  --fs-14: 0.875rem;
+  --fs-15: 0.938rem;
+  --fs-16: 1rem;
+  --fs-18: 1.125rem;
+  --fs-20: 1.25rem;
+  --fs-22: 1.375rem;
+  --fs-24: 1.5rem;
+  --fs-26: 1.625rem;
+  --fs-28: 1.75rem;
+  --fs-30: 1.875em;
+  --fs-32: 2rem;
+  --fs-36: 2.25rem;
+  --fs-40: 2.5rem;
+  --fs-48: 3rem;
+  --fs-56: 3.5rem;
+  --fs-60: 3.75rem;
+  --fs-64: 4rem;
+  --fs-72: 4.5rem;
+  --fs-80: 5rem;
+  --fs-100: 6.25em;
+
+  /* Primary */
+
+  --clr-blue: hsl(246, 80%, 60%);
+
+  --clr-orange: hsl(15, 100%, 70%);
+  --clr-soft-blue: hsl(195, 74%, 62%);
+  --clr-light-red: hsl(348, 100%, 68%);
+  --clr-lime-green: hsl(145, 58%, 55%);
+  --clr-violet: hsl(264, 64%, 52%);
+  --clr-sof-orange: hsl(43, 84%, 65%);
+
+  /* Neutral */
+
+  --clr-very-dark-blue: hsl(226, 43%, 10%);
+  --clr-dark-blue: hsl(235, 46%, 20%);
+  --clr-desaturated-blue: hsl(235, 45%, 61%);
+  --clr-pale-blue: hsl(236, 100%, 87%);
+
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-black: hsla(0, 0%, 0%, 1);
+}
+
+body {
+  background-color: var(--clr-very-dark-blue);
+  color: var(--clr-white);
+  font-family: var(--ff-main);
+  font-size: var(--fs-16);
+  font-weight: var(--fw-regular);
+  line-height: 1.8333;
+  text-align: left;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+ul {
+  list-style: none;
+}
+
+/* ================== */
+/* Typography */
+/* ================== */
+
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+/* ==================================== */
+
 .attribution {
   font-size: 11px;
   text-align: center;
