--- a/style.css
+++ b/style.css
@@ -49,13 +49,12 @@
   /* Primary */
 
   --clr-blue: hsl(246, 80%, 60%);
-
   --clr-orange: hsl(15, 100%, 70%);
   --clr-soft-blue: hsl(195, 74%, 62%);
   --clr-light-red: hsl(348, 100%, 68%);
   --clr-lime-green: hsl(145, 58%, 55%);
   --clr-violet: hsl(264, 64%, 52%);
-  --clr-sof-orange: hsl(43, 84%, 65%);
+  --clr-soft-orange: hsl(43, 84%, 65%);
 
   /* Neutral */
 
@@ -129,10 +128,12 @@ ul {
 
 .activity {
   font-weight: var(--fw-medium);
+  line-height: 1;
 }
 
 .hours {
   font-weight: var(--fw-light);
+  line-height: 1;
 }
 
 .previous {
@@ -147,16 +148,147 @@ ul {
 /* Buttons & inputs */
 /* ================== */
 
+.btn {
+  background: none;
+  border: none;
+  color: var(--clr-desaturated-blue);
+  font-size: var(--fs-18);
+
+  padding-bottom: 0.25em;
+
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:focus {
+  color: var(--clr-white);
+}
+
 /* ================== */
 /* Utility styles */
 /* ================== */
 
 .wrapper {
+  padding: 5em 1.5em;
 }
 
 /* ================== */
 /* SECTIONS */
 /* ================== */
+
+/* Main grid */
+.dashboard-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  row-gap: 1.5em;
+}
+
+/* Cards */
+.card {
+  background: var(--clr-dark-blue);
+  border-radius: 0.75em;
+}
+
+.card--user {
+}
+
+.cu--upper {
+  background-color: var(--clr-blue);
+  border-radius: 0.75em;
+  padding: 2.125em 2em;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1.25em;
+}
+
+.info__value {
+  margin-top: 0.15em;
+  line-height: 1;
+}
+
+.avatar {
+  width: 64px;
+}
+
+.cu--lower {
+  padding: 1.5em 0;
+}
+
+.list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.card--stat {
+  background: var(--clr-white);
+  height: 160px;
+
+  position: relative;
+
+  overflow: hidden;
+}
+
+.cs__data {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-radius: 0.75em;
+
+  height: 122px;
+  background: var(--clr-dark-blue);
+  padding: 1.75em 1.5em;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.data__top,
+.data__bottom {
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cs--work {
+  background: url('./images/icon-work.svg') no-repeat top -10px right 17px;
+  background-color: var(--clr-orange);
+}
+
+.cs--play {
+  background: url('./images/icon-play.svg') no-repeat top -10px right 17px;
+  background-color: var(--clr-soft-blue);
+}
+
+.cs--study {
+  background: url('./images/icon-study.svg') no-repeat top -10px right 17px;
+  background-color: var(--clr-light-red);
+}
+.cs--exercise {
+  background: url('./images/icon-exercise.svg') no-repeat top -10px right 17px;
+  background-color: var(--clr-lime-green);
+}
+.cs--social {
+  background: url('./images/icon-social.svg') no-repeat top -10px right 17px;
+  background-color: var(--clr-violet);
+}
+.cs--self-care {
+  background: url('./images/icon-self-care.svg') no-repeat top -10px right 17px;
+  background-color: var(--clr-soft-orange);
+}
+
+/* Footer */
+.footer {
+  margin-top: 0.5em;
+}
 
 /* ==================================== */
 /* ==================================== */
