solved button bug

--- a/style.css
+++ b/style.css
@@ -166,6 +166,10 @@ ul {
   color: var(--clr-white);
 }
 
+.btn.active {
+  color: var(--clr-white);
+}
+
 /* ================== */
 /* Utility styles */
 /* ================== */
@@ -184,6 +188,10 @@ ul {
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   row-gap: 1.5em;
+
+  max-width: 400px;
+
+  margin: 0 auto;
 }
 
 /* Cards */
@@ -299,45 +307,41 @@ ul {
   margin-top: 0.5em;
 }
 
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-/* ==================================== */
-
 .attribution {
   text-align: center;
 }
 .attribution a {
   color: var(--clr-orange);
+}
+
+/* ================== */
+/* MEDIA QUERIES */
+/* ================== */
+
+/* Tablet */
+@media (min-width: 767px) {
+  /* Typography */
+  .lg-text {
+    font-size: var(--fs-40);
+  }
+
+  .xl-text {
+    font-size: var(--fs-56);
+  }
+
+  /* UTILITY STYLES */
+  .wrapper {
+    padding: 7.5em 2.75em;
+  }
+
+  /* SECTIONS */
+  /* Main grid */
+  .dashboard-grid {
+    /* display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    row-gap: 1.5em; */
+
+    max-width: unset;
+  }
 }
