--- a/style.css
+++ b/style.css
@@ -396,3 +396,34 @@ ul {
     align-items: flex-start;
   }
 }
+
+/* Widescreens / External monitors */
+@media (min-width: 1280px) {
+  /* UTILITY STYLES */
+  .wrapper {
+    padding: 15.8125em 0em 5em;
+  }
+
+  /* SECTIONS */
+  /* Main grid */
+  .dashboard-grid {
+    grid-template-areas:
+      'user stat-1 stat-2 stat-3'
+      'user stat-4 stat-5 stat-6';
+
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    column-gap: 1.875em;
+    row-gap: 1.875em;
+
+    max-width: 1115px;
+  }
+}
+
+/* Laptop */
+@media (min-width: 1280px) and (max-height: 780px) {
+  /* UTILITY STYLES */
+  .wrapper {
+    padding: 5em 0em 5em;
+  }
+}
